quarkus/JustinAdapter/target/kubernetes/kubernetes.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 72d87f2c7c4412758bde08996f6a4f72188d4de3
    app.quarkus.io/build-timestamp: 2023-06-12 - 20:21:53 +0000
  labels:
    app.kubernetes.io/name: quarkus-justin-adapter
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: quarkus-justin-adapter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quarkus-justin-adapter
      app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 72d87f2c7c4412758bde08996f6a4f72188d4de3
        app.quarkus.io/build-timestamp: 2023-06-12 - 20:21:53 +0000
      labels:
        app.kubernetes.io/name: quarkus-justin-adapter
        app.kubernetes.io/version: 1.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: JAVA_APP_JAR
              value: /deployments/quarkus-run.jar
            - name: JAVA_OPTIONS
              value: ""
          image: vicgu/quarkus-justin-adapter:1.0-SNAPSHOT
          imagePullPolicy: Always
          name: quarkus-justin-adapter
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 72d87f2c7c4412758bde08996f6a4f72188d4de3
    app.quarkus.io/build-timestamp: 2023-06-12 - 20:21:53 +0000
  labels:
    app.kubernetes.io/name: quarkus-justin-adapter
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: quarkus-justin-adapter
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-justin-adapter
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
